--- a/Amazon/style.css
+++ b/Amazon/style.css
@@ -30,6 +30,13 @@ body {
     height: 82%;
     width: 100%;
     background-color: lightgreen;
+    padding: 10px;
+    display: flex;
+    /* flex wrap was done to wrapp the children so that 
+    they dont get compressed due to the dimension of parent */
+    flex-wrap: wrap;
+    /* overflow -y defines how you want to handle the overflow vertically */
+    overflow-y: scroll;
 }
 
 .section1 {
@@ -120,13 +127,14 @@ body {
     display: flex;
     align-items: center;
     width: 25%;
+    
 }
 .signin>button{
     width: 100%;
     height: 70%;
     border-radius: 5px;
     border: none;
-    
+    cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f3cf72;
 
@@ -158,4 +166,41 @@ body {
 }
 .cart>i{
     color: white;
+}
+
+.subheader{
+  display: flex;
+  align-items: center;
+}
+.subheader>div{
+    margin-left: 15px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.hoverEffect{
+    border: 1px solid black;
+    transition:1ms;
+}
+
+.hoverOut{
+    transition: 1ms ;
+    border: none;
+}
+
+.card{
+    margin: 8px;
+    height: 45%;
+    width: 15%;
+    background-color: red;
+}
+.image-card{
+    height: 60%;
+    width: 100%;
+    background-color: yellow;
+}
+.card-content{
+    height: 40%;
+    width: 100%;
+    background-color: pink;
 }
