--- a/Amazon/style.css
+++ b/Amazon/style.css
@@ -23,13 +23,13 @@ body {
 .subheader {
     height: 8%;
     width: 100%;
-    background-color: lightgrey;
+    background-color: #232f3e;
 }
 
 .container {
     height: 82%;
     width: 100%;
-    background-color: lightgreen;
+    background-color: #e7e7e7;
     padding: 10px;
     display: flex;
     /* flex wrap was done to wrapp the children so that 
@@ -79,7 +79,7 @@ body {
 
 .deliver>.icon>i {
     height: 6px;
-    color:white;
+    color: white;
 }
 
 .deliver-content {
@@ -87,32 +87,36 @@ body {
     font-size: small;
     width: 70%;
     display: flex;
-    color:white;
+    color: white;
     font-weight: 200;
     font-family: Arial, Helvetica, sans-serif;
     flex-direction: column;
     justify-content: center;
 }
-.section2{
+
+.section2 {
     /* background-color: red; */
     height: 65%;
     width: 60%;
     margin-left: 15px;
 }
-.section2>.searchbox>input{
-  height: 95%;
-  width: 100%;
-  border-radius: 8px;
-  outline: none;
-  border: none;
+
+.section2>.searchbox>input {
+    height: 95%;
+    width: 100%;
+    border-radius: 8px;
+    outline: none;
+    border: none;
 }
+
 .searchbox {
     height: 100%;
     width: 100%;
     /* background-color: red; */
     /* padding: 2px; */
 }
-.section3{
+
+.section3 {
     /* background-color: red; */
     width: 22%;
     height: 65%;
@@ -121,15 +125,17 @@ body {
     align-items: center;
     justify-content: space-around;
 }
+
 .signin {
     /* background-color: red; */
     height: 100%;
     display: flex;
     align-items: center;
     width: 25%;
-    
+
 }
-.signin>button{
+
+.signin>button {
     width: 100%;
     height: 70%;
     border-radius: 5px;
@@ -139,68 +145,88 @@ body {
     background-color: #f3cf72;
 
 }
+
 .orders {
-     /* background-color: red; */
-     height: 100%;
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-     width: 25%;
-     color:white;
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: small;
-     font-weight: bold;
-     
- }
+    /* background-color: red; */
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    font-weight: bold;
+
+}
 
 
 .cart {
-      /* background-color: red; */
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 20%;
-      
+    /* background-color: red; */
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+
 }
-.cart>i{
+
+.cart>i {
     color: white;
 }
 
-.subheader{
-  display: flex;
-  align-items: center;
+.subheader {
+    display: flex;
+    align-items: center;
 }
-.subheader>div{
+
+.subheader>div {
     margin-left: 15px;
     font-weight: bold;
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.hoverEffect{
+.hoverEffect {
     border: 1px solid black;
-    transition:1ms;
+    transition: 1ms;
 }
 
-.hoverOut{
-    transition: 1ms ;
+.hoverOut {
+    transition: 1ms;
     border: none;
 }
 
-.card{
+.card {
     margin: 8px;
     height: 45%;
     width: 15%;
-    background-color: red;
+    background-color: white;
+    -webkit-box-shadow: 10px 10px 5px -4px rgba(204, 196, 204, 1);
+    -moz-box-shadow: 10px 10px 5px -4px rgba(204, 196, 204, 1);
+    box-shadow: 10px 10px 5px -4px rgba(204, 196, 204, 1);
 }
-.image-card{
+
+.image-card {
     height: 60%;
     width: 100%;
-    background-color: yellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.card-content{
+
+.image-card>img {
+    height: 95%;
+    width: 95%;
+}
+
+.card-content {
     height: 40%;
     width: 100%;
-    background-color: pink;
+    padding: 2px;
+    /* background-color: pink; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
